@@ -522,6 +522,22 @@ name|common
 operator|.
 name|cloud
 operator|.
+name|ClusterState
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
 name|Replica
 import|;
 end_import
@@ -4989,16 +5005,32 @@ operator|.
 name|getZkStateReader
 argument_list|()
 decl_stmt|;
+name|ClusterState
+name|clusterState
+init|=
+name|zkStateReader
+operator|.
+name|getClusterState
+argument_list|()
+decl_stmt|;
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|liveNodes
+init|=
+name|clusterState
+operator|.
+name|getLiveNodes
+argument_list|()
+decl_stmt|;
 name|Collection
 argument_list|<
 name|Slice
 argument_list|>
 name|slices
 init|=
-name|zkStateReader
-operator|.
-name|getClusterState
-argument_list|()
+name|clusterState
 operator|.
 name|getSlices
 argument_list|(
@@ -5239,6 +5271,39 @@ argument_list|(
 name|leaderUrl
 argument_list|)
 decl_stmt|;
+comment|// if replica's node is not live, it's status is DOWN
+name|String
+name|nodeName
+init|=
+name|replicaCoreProps
+operator|.
+name|getNodeName
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|nodeName
+operator|==
+literal|null
+operator|||
+operator|!
+name|liveNodes
+operator|.
+name|contains
+argument_list|(
+name|nodeName
+argument_list|)
+condition|)
+block|{
+name|replicaStatus
+operator|=
+name|ZkStateReader
+operator|.
+name|DOWN
+expr_stmt|;
+block|}
+else|else
+block|{
 comment|// query this replica directly to get doc count and assess health
 name|HttpSolrServer
 name|solr
@@ -5444,6 +5509,7 @@ operator|.
 name|shutdown
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 name|replicaList
 operator|.
